objects/Q4__Qvidian_Content_History__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Device_Type__c</fullName>
        <label>Device Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Event_Source__c</fullName>
        <label>Event Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>SF1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q4__OS__c</fullName>
        <label>OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qvidian Content</label>
        <referenceTo>Q4__Qvidian_Content__c</referenceTo>
        <relationshipLabel>Qvidian Content History</relationshipLabel>
        <relationshipName>Qvidian_Content_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Qvidian Event Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qvidian Play</label>
        <referenceTo>Q4__Qvidian_Play_Instance__c</referenceTo>
        <relationshipLabel>Qvidian Content History</relationshipLabel>
        <relationshipName>Qvidian_Content_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qvidian Playbook</label>
        <referenceTo>Q4__Qvidian_Playbook_Instance__c</referenceTo>
        <relationshipLabel>Qvidian Content History</relationshipLabel>
        <relationshipName>Qvidian_Content_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qvidian User</label>
        <referenceTo>Q4__Qvidian_User__c</referenceTo>
        <relationshipLabel>Qvidian Content History</relationshipLabel>
        <relationshipName>Qvidian_Content_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Usage_Timestamp__c</fullName>
        <label>Usage Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContentPreview</fullName>
                </value>
                <value>
                    <fullName>ContentDownload</fullName>
                </value>
                <value>
                    <fullName>ContentEmailed</fullName>
                </value>
                <value>
                    <fullName>CRMFieldPlayItemPush</fullName>
                </value>
                <value>
                    <fullName>ContentClicked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Qvidian Content History</label>
    <nameField>
        <displayFormat>QCH-{000000}</displayFormat>
        <label>Qvidian Content History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qvidian Content History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>